Change z-index to make sure header and link text are always above img elements

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,12 +14,21 @@ a {
     flex-direction: column;
     transform: scale(1);
     transition: transform 0.25s ease;
+    position: relative;
+    z-index: 0;
+}
+
+a:hover {
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
+    z-index: 5;
 }
 
 img {
     display: block;
     max-width: 50%;
     border: 1px solid #777;
+    position: relative;
 }
 
 ul,
@@ -42,6 +51,8 @@ pre {
     color: white;
     font-size: 0.8rem;
     transition: transform 0.5s ease;
+    position: relative;
+    z-index: 10;
 }
 
 a:not(:has(img)):hover {
@@ -59,11 +70,6 @@ pre:not(:first-of-type):nth-of-type(odd):hover {
 
 pre:not(:first-of-type):nth-of-type(even):hover {
     transform: rotate(-15deg) scale(1.2);
-}
-
-a:hover {
-    -webkit-filter: invert(100%);
-    filter: invert(100%);
 }
 
 #screensaver {
@@ -108,6 +114,7 @@ a:hover {
         padding-top: 18px;
         padding-bottom: 3px;
         text-align: center;
+        z-index: 10;
     }
     #screensaver-text {
         font-size: 24px;
